# C_DSA_interactive_suite

./: .clang-format  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  demo  dsa  skills-lock.json
.agents/: AGENTS.md
.github/workflows/: ci.yml  test.yml
algorithms/: algorithms.h  algorithms_demo.c  bubble_sort.c  insertion_sort.c
benchmark/: benchmark.c  benchmark.h
data_structures/: array.c  array.h  binary_search_tree.c  circular_queue.c  circular_queue.h  data_structures_demo.c  dll.c  dll.h  main.c  safe_input.c  safe_input.h  safe_input_infix.c  safe_input_int.c  safe_input_postfix.c  sll.c  sll.h
demos/advanced_sorting_algorithms/: quick_sort_demo.c
demos/data_structures/: circular_queue_demo.c  deque_demo.c  dll_demo.c  scll_demo.c  simple_queue_demo.c  sll_demo.c  stack_demo.c
demos/dynamic_programming/: fibonacci_demo.c  knapsack_demo.c  lcs_demo.c  mcm_demo.c
demos/graph_traversals/: dfs_demo.c
demos/string_algorithms/: kmp_demo.c  naive_string_matching_demo.c  rabin_karp_demo.c  suffix_array_demo.c
demos/trees/: avl_demo.c  bst_demo.c
expression_evaluation/: expression.h  expression_evaluation_demo.c  infix_to_postfix.c  postfix_evaluation.c  safe_input_infix.c  safe_input_postfix.c  stack.c
features/benchmark/: benchmark.c  benchmark.h  benchmark_demo.c
features/bigo_verifier/: bigo_verifier.c  bigo_verifier.h  bigo_verifier_demo.c
features/export/: export.c  export.h
features/memory_inspector/: memory_inspector.c  memory_inspector.h  memory_inspector_demo.c
features/memory_profiler/: memory_tracker.c
features/telemetry/: sorting_telemetry_dashboard.c  telemetry.c  telemetry.h
graph_traversals/: bfs.c  dfs.c  graph_traversals.h  graph_traversals_demo.c
graph_traversals_bfs_dfs/: dfs.c  graph_traversals.h  graph_traversals_demo.c
hashing/: linear_probing.c  separate_chaining.c
help/: help_advanced_topics.c  help_data_structures.c  help_expression_evaluation.c  help_graphs_trees.c  help_sorting_searching.c
linkedlist_stack_queue/: circular_queue.c  darshan_linked_list.c  dll.c  dll.h  linkedlist.h  main.c  main_queue.c  main_stack.c  queues_using_linked_list.c  sll.c  sll.h  stack_using_linked_list.c
searching_algorithms/: binary_search.c  linear_search.c
sorting_algorithms/: bubble_sort.c  insertion_sort.c  selection_sort.c  sorting_algorithms_demo.c
sorting_algorithms_n2/: selection_sort.c
src/: main.c
src/advanced_graph_algorithms/: bipartite_matching.c  eulerian_path.c  hopcroft_karp.c  scc.c  scc_visualize.c
src/advanced_heaps/: advanced_heaps.h  advanced_heaps_demo.c  dary_heap.c  leftist_skew_heap.c  min_max_heap.c  treap.c
src/advanced_sorting_algorithms/: advanced_sorting.h  advanced_sorting_demo.c  bucket_sort.c  heap_sort.c  merge_sort.c  quick_sort.c  radix_sort.c
src/avl_tree/: avl_tree.c  avl_tree.h  avl_tree_demo.c
src/backtracking/: backtracking.h  backtracking_demo.c  graph_coloring.c  knights_tour.c  n_queens.c  rat_in_maze.c  sudoku.c
src/benchmark/: benchmark.h  benchmark_demo.c  benchmark_graphs.c  benchmark_sorting.c
src/bigo/: bigo.c  bigo.h
src/bigo_engine/: bigo_engine.c  bigo_engine.h
src/bit_manipulation/: advanced_ops.c  basic_ops.c  bit_manipulation.h
src/cache_simulator/: cache.c  cache.h  cache_demo.c
src/compression/: bwt.c  compression.h  compression_demo.c  huffman.c  huffman_visualizer.c
src/concurrent_data_structures/: concurrent_data_structures.h  concurrent_data_structures_demo.c  ring_buffer.c  ring_buffer.h
src/data_structures/: array.c  array.h  binary_search_tree.c  bst.c  bst.h  circular_queue.c  circular_queue.h  data_structures.h  data_structures_demo.c  deque.c  dll.c  dll.h  main.c  priority_queue.c  safe_input.h  safe_input_int.c  scll.c  scll.h  segment_tree.c  simple_queue.c  sll.c  sll.h  stack.c  stack.h  tbt.c  tbt.h
src/debugger/: debugger.c  debugger.h  step_debugger.c  step_debugger.h
src/dynamic_programming/: dynamic_programming.h  dynamic_programming_demo.c  fibonacci.c  knapsack.c  lcs.c  mcm.c
src/error_correction_algorithms/: checksum.c  error_correction_algorithms.h  error_correction_algorithms_demo.c  lrc.c  lrc_receiver.c
src/expression_evaluation/: expression.h  expression_evaluation_demo.c  infix_to_postfix.c  infix_to_prefix.c  parantheses_checker.c  postfix_evaluation.c  safe_input_infix.c  safe_input_postfix.c  stack.c  stack.h
src/fuzzer/: fuzzer.c  fuzzer.h
src/graph_traversals/: astar.c  bellman_ford.c  bfs.c  bipartite_matching.c  dfs.c  dijkstra.c  edmonds_karp.c  floyd_warshall.c  ford_fulkerson.c  graph_io.c  graph_traversals.h  graph_traversals_demo.c  hopcroft_karp.c  kruskal.c  prim_mst.c  scc.c  topological_sort.c
src/hashing/: hash.h  hashing_algorithms_demo.c  linear_probing.c  separate_chaining.c
src/help/: help.c  help.h
src/job_scheduling/: fcfs.c  job_scheduling_demo.c
src/memory_inspector/: memory_inspector.c  memory_inspector.h
src/process_synchronization/: dining_philosophers.c  petersons_algorithm.c  process_synchronization.h  process_synchronization_demo.c  producer_consumer.c
src/profiler/: memory_tracker.c  memory_tracker.h
src/searching_algorithms/: binary_search.c  binary_search_recursive.c  interpolation_search.c  jump_search.c  linear_search.c  searching_algorithms.h  searching_algorithms_demo.c
src/serialization/: serialization.c  serialization.h
src/sorting_algorithms_n2/: bubble_sort.c  insertion_sort.c  selection_sort.c  shell_sort.c  sorting_algorithms_n2.h  sorting_algorithms_n2_demo.c
src/string_algorithms/: aho_corasick.c  boyer_moore.c  kmp.c  rabin_karp.c  (+5 more)
tests/: test_advanced_sorting.c  test_array.c  test_avl.c  test_bellman_ford.c  test_bfs.c  test_bst.c  test_circ_queue.c  test_dfs.c  test_dijkstra.c  test_dll.c  test_fuzzer.c  test_hash.c  test_hash_function.c  test_invariant_dijkstra.c  test_prim_mst.c  test_producer_consumer.c  test_search.c  test_sll.c  test_stack.c  test_topological_sort.c  test_trie.c  test_utils.h
trees/: binary_search_tree.c
tui/: tui.c
visualization/: README.md
(+76 files in other folders)
